# real-time-monitor

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  protocol.md  pyproject.toml  setup_build.sh
.github/workflows/: build.yml  python-wheels.yml
cmake/: flags.cmake  real_time_monitor_recorder_target.cmake  toolchain.cmake.template
conan/: conanfile.txt  profile.txt.template
conan/all/: conanfile.py
lib/: CMakeLists.txt
lib/include/: error.h  io.h  parser.h  probe.h
lib/include/rtm/: commands.h  data.h  error.h  io.h  metadata.h  parser.h  probe.h  recorder.h  serializer.h  time_wrapper.h
lib/include/rtm/io/: file.h  io.h  null.h  socket.h
lib/include/rtm/io/posix/: local_socket.h  tcp_socket.h  udp_socket.h
lib/include/rtm/os/: time.h  types.h
lib/include/rtm/os/posix/: os_types.h
lib/py_bindings/src/: lib_py.cc
lib/src/: data.cc  error.cc  io.cc  metadata.cc  parser.cc  parser_data.cc  parser_header.cc  parser_metadata.cc  probe.cc  recorder.cc  time_wrapper.cc
lib/src/io/: io.cc
lib/src/io/posix/: file.cc  local_socket.cc  socket.cc  tcp_socket.cc  udp_socket.cc
lib/src/os/: time.cc
lib/src/os/posix/: time.cc
monitor/: CMakeLists.txt  activity.h  editor.cc  editor.h  main.cc  main.mm  main_window.cc  main_window.h  plot.cc  plot.h  serie.cc  serie.h
probe/: CMakeLists.txt
probe/generator/: CMakeLists.txt  main.cc
probe/include/: io.h  parser.h
probe/src/: parser.cc  probe.cc  serializer.cc
py_bindings/: CMakeLists.txt
py_bindings/examples/: probe.py
py_bindings/src/: rtm_py.cc
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  test_package.cpp
tests/: CMakeLists.txt  blackbox_test.cc  integration_test.cc  test_helpers.h  test_main.cc
tools/: CMakeLists.txt
tools/generator/: CMakeLists.txt  main.cc
tools/recorder/: CMakeLists.txt  main.cc
tools/setup/: detect_compiler.sh  detect_gcc.sh
