[build-system]
requires = ["scikit-build-core>=0.5.0", "nanobind>=1.3.2", "conan"]
build-backend = "scikit_build_core.build"

[project]
name = "real-time-monitor"
version = "0.0.0"
description = "A probe and a moonitor to investigate your application real time behavior."
readme = {file = "README.md", content-type = "text/markdown"}
license = { text = "CeCILL-C" }
maintainers = [
  {name = "Philippe Leduc", email = "philippe.leduc@mailfence.com"}
]

[tool.scikit-build]
minimum-version = "0.11"
cmake.version = ">=3.30"
ninja.make-fallback = true
wheel.cmake = true
editable.verbose = true

[tool.scikit-build.cmake.define]
CMAKE_INSTALL_RPATH_USE_LINK_PATH = true
CMAKE_BUILD_WITH_INSTALL_RPATH = true
CMAKE_INSTALL_RPATH = '$ORIGIN'
CMAKE_INTERPROCEDURAL_OPTIMIZATION = true
CMAKE_SHARED_LINKER_FLAGS_RELEASE = "-Wl,--gc-sections -Wl,--strip-all"
BUILD_MONITOR = "ON"
BUILD_TOOLS = "ON"

[tool.cibuildwheel]
# https://github.com/pypa/cibuildwheel/blob/main/docs/options.md
build-verbosity = 1
manylinux-x86_64-image = "manylinux_2_28"
build = ["cp310-*", "cp311-*", "cp312-*"]
skip = ["cp310-musllinux*", "cp311-musllinux*", "cp312-musllinux*"]

[[tool.cibuildwheel.overrides]]
# nanobind does not support Stable ABI for Python < 3.12 - Linux
select = "cp3{10,11}-*linux*"
config-settings = { "cmake.define.CMAKE_CI_BUILD" = true, "cmake.define.CMAKE_FIND_ROOT_PATH" = "/tmp/rtm_build_config", "cmake.define.CMAKE_TOOLCHAIN_FILE" = "/tmp/rtm_build_config/toolchain.cmake" }
repair-wheel-command = [
  "auditwheel repair --zip-compression-level=9 --exclude libGLX.so.0 --exclude libOpenGL.so.0 --exclude libGLdispatch.so.0 -w {dest_dir} {wheel}"
]

[[tool.cibuildwheel.overrides]]
# nanobind does not support Stable ABI for Python < 3.12 - macOS
select = "cp3{10,11}-macosx*"
config-settings = { "cmake.define.CMAKE_CI_BUILD" = true, "cmake.define.CMAKE_OSX_DEPLOYMENT_TARGET" = "10.15", "cmake.define.CMAKE_FIND_ROOT_PATH" = "/tmp/rtm_build_config", "cmake.define.CMAKE_TOOLCHAIN_FILE" = "/tmp/rtm_build_config/toolchain.cmake" }
repair-wheel-command = [
  "delocate-wheel -w {dest_dir} {wheel}"
]

[tool.cibuildwheel.config-settings]
"wheel.py-api" = "cp312"

[tool.cibuildwheel.config-settings.cmake.define]
CMAKE_CI_BUILD = true
CMAKE_FIND_ROOT_PATH = "/tmp/rtm_build_config"
CMAKE_TOOLCHAIN_FILE = "/tmp/rtm_build_config/toolchain.cmake"

[tool.cibuildwheel.linux]
before-all = [
  'pipx install conan',
  './setup_build.sh /tmp/rtm_build_config',
  'source tools/setup/version.sh && sed -i "s/0\.0\.0/${VERSION}/g" pyproject.toml',
  'dnf install -y libXrandr-devel libXinerama-devel libXcursor-devel libXi-devel wayland-devel libxkbcommon-devel' # For build on manylinux_2_28 - which uses AlmaLinux 8
]
repair-wheel-command = [
  "auditwheel repair --zip-compression-level=9 --exclude libGLX.so.0 --exclude libOpenGL.so.0 --exclude libGLdispatch.so.0 -w {dest_dir} {wheel}",
  "pipx run abi3audit --strict --report {wheel}",
]

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }
archs = ["universal2"]

before-all = [
  "pipx install conan",
  "./setup_build.sh /tmp/rtm_build_config",
  "source tools/setup/version.sh && sed -i '' \"s/0\\.0\\.0/${VERSION}/g\" pyproject.toml"
]

repair-wheel-command = [
  "delocate-wheel -w {dest_dir} {wheel}",
  "pipx run abi3audit --strict --report {wheel}"
]
